k8s/01-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: cka-lab
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: cka-api:v4
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
      nodeSelector:
        disktype: ssd
---

apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: cka-lab
spec:
  selector:
    app: api
  ports:
    - port: 80
      targetPort: 8000
