k8s/06-postgres.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: postgres
  namespace: cka-lab

spec:
  replicas: 1
  
  selector:
    matchLabels: 
      app: postgres

  template:
    metadata:
      labels:
        app: postgres

    spec:
      containers:
        - name: postgres
          image: postgres:16

          ports: 
            - containerPort: 5432

          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-pvc

---

apiVersion: v1
kind: Service
metadata:
  name: postgresql
  namespace: cka-lab

spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
